[package]
name = "tokio-tls"
version = "0.1.0"
authors = ["Daniel Lyne <DLyne@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"

bincode = "1.2.1"
serde = "1.0"

rustls = "0.19.1"
tokio = { version = "1.5.0", features = ["full"] }
tokio-rustls = "0.22.0"
webpki = "0.21.0"
